--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
                 <artifactId>mesos-rxjava-recordio</artifactId>
                 <version>0.1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.mesos.rx.java</groupId>
+                <artifactId>mesos-rxjava-recordio</artifactId>
+                <version>0.1.0-SNAPSHOT</version>
+                <type>test-jar</type>
+            </dependency>
 
             <!-- Rx Libraries -->
             <dependency>
