Create test module.
Create an independent test module where all testing related code and resources can go. This allows us to have an artifact that we can release with testing utilities but still allows for strong boundary controls and classpath management.

--- a/mesos-rxjava-core/pom.xml
+++ b/mesos-rxjava-core/pom.xml
@@ -40,9 +40,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.mesos.rx.java</groupId>
-            <artifactId>mesos-rxjava-recordio</artifactId>
-            <type>test-jar</type>
-            <scope>test</scope>
+            <artifactId>mesos-rxjava-test</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.mesos</groupId>
