--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
         <module>mesos-rxjava-core</module>
         <module>mesos-rxjava-recordio</module>
         <module>mesos-rxjava-example</module>
+        <module>mesos-rxjava-test</module>
     </modules>
 
     <distributionManagement>
@@ -116,7 +117,12 @@
                 <groupId>org.apache.mesos.rx.java</groupId>
                 <artifactId>mesos-rxjava-recordio</artifactId>
                 <version>0.1.0-SNAPSHOT</version>
-                <type>test-jar</type>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.mesos.rx.java</groupId>
+                <artifactId>mesos-rxjava-test</artifactId>
+                <version>0.1.0-SNAPSHOT</version>
+                <scope>test</scope>
             </dependency>
 
             <!-- Rx Libraries -->
