--- a/mesos-rxjava-example/mesos-rxjava-example-framework/pom.xml
+++ b/mesos-rxjava-example/mesos-rxjava-example-framework/pom.xml
@@ -28,6 +28,10 @@
             <artifactId>mesos-rxjava-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.mesos.rx.java</groupId>
+            <artifactId>mesos-rxjava-test</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.mesos</groupId>
             <artifactId>mesos</artifactId>
         </dependency>
