--- a/mesos-rxjava-recordio/pom.xml
+++ b/mesos-rxjava-recordio/pom.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~    Copyright (C) 2015 Mesosphere, Inc
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.apache.mesos.rx.java</groupId>
+        <groupId>com.mesosphere.mesos.rx.java</groupId>
         <artifactId>mesos-rxjava</artifactId>
         <version>0.1.0-SNAPSHOT</version>
     </parent>
@@ -11,7 +26,7 @@
 
     <artifactId>mesos-rxjava-recordio</artifactId>
 
-    <name>Apache Mesos RxJava Client :: RecordIO Operator</name>
+    <name>Mesos RxJava Client :: RecordIO Operator</name>
 
     <description>
         rx.Observable.Operator for extracting RecordIO messages from a stream of ByteBuf
@@ -36,7 +51,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.mesos.rx.java</groupId>
+            <groupId>com.mesosphere.mesos.rx.java</groupId>
             <artifactId>mesos-rxjava-test</artifactId>
         </dependency>
     </dependencies>
