Add Mesos Scheduler Simulation
Create a new class MesosSchedulerSimulation which provides the ability
to run a simulated mesos master returning events provided to/via a
specified Observable<Protos.Event>.

As part of this new server a new module mesos-rxjava-util had to be
created to house some classes that are needed by mesos-rxjava-test. This
new module ensures that we don't have cyclic dependecies amongst our
modules.

--- a/mesos-rxjava-test/pom.xml
+++ b/mesos-rxjava-test/pom.xml
@@ -38,8 +38,29 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.mesosphere.mesos.rx.java</groupId>
+            <artifactId>mesos-rxjava-util</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.mesos</groupId>
             <artifactId>mesos</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxnetty</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-http</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
