Restructure modules to minimize dependency on mesos jar
MesosClient for some time has been decoupled from the protos being sent back
and forth between mesos, this change extends that decoupling to
MesosSchedulerSimulation as well as the maven dependency graph itself.

* Rename mesos-rxjava-core -> mesos-rxjava-client
* Introduce new module mesos-rxjava-protobuf-client that merges the client and
  the mesos protobufs
* TestingProtos has been removed from mesos-rxjava-test due to it only being
  used in some recordio tests.

--- a/mesos-rxjava-test/pom.xml
+++ b/mesos-rxjava-test/pom.xml
@@ -26,7 +26,7 @@
 
     <artifactId>mesos-rxjava-test</artifactId>
 
-    <name>Mesos RxJava Client :: Test Tools</name>
+    <name>Mesos RxJava :: Test Tools</name>
 
     <description>
         A set of tools to help when writing tests.
@@ -42,10 +42,6 @@
             <artifactId>mesos-rxjava-util</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.mesos</groupId>
-            <artifactId>mesos</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.reactivex</groupId>
             <artifactId>rxnetty</artifactId>
         </dependency>
@@ -57,6 +53,7 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-codec-http</artifactId>
         </dependency>
+        <!--suppress MavenDuplicateDependenciesInspection we're changing the scope to compile instead of test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
