--- a/mesos-rxjava-example/mesos-rxjava-example-framework/pom.xml
+++ b/mesos-rxjava-example/mesos-rxjava-example-framework/pom.xml
@@ -36,10 +36,6 @@
     <dependencies>
         <dependency>
             <groupId>com.mesosphere.mesos.rx.java</groupId>
-            <artifactId>mesos-rxjava-recordio</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mesosphere.mesos.rx.java</groupId>
             <artifactId>mesos-rxjava-protobuf-client</artifactId>
         </dependency>
         <dependency>
@@ -66,6 +62,13 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-codec-http</artifactId>
         </dependency>
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
         <!--suppress MavenDuplicateDependenciesInspection we're changing the scope to compile instead of test -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
