--- a/mesos-rxjava-recordio/pom.xml
+++ b/mesos-rxjava-recordio/pom.xml
@@ -43,8 +43,17 @@
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-codec-http</artifactId>
+            <artifactId>netty-buffer</artifactId>
+            <version>${version.netty}</version>
         </dependency>
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <!-- Test Libraries -->
         <!--suppress MavenDuplicateDependenciesInspection we're changing the scope to test instead of compile -->
         <dependency>
             <groupId>org.apache.mesos</groupId>
