--- a/mesos-rxjava-test/pom.xml
+++ b/mesos-rxjava-test/pom.xml
@@ -59,6 +59,13 @@
             <artifactId>junit</artifactId>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
     </dependencies>
 
 
