--- a/mesos-rxjava-client/pom.xml
+++ b/mesos-rxjava-client/pom.xml
@@ -60,6 +60,10 @@
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
+            <artifactId>netty-handler</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
             <artifactId>netty-transport-native-epoll</artifactId>
         </dependency>
         <!-- Logging -->
