--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <packaging>pom</packaging>
 
     <name>Mesos RxJava</name>
-    <url>https://github.com/mesos/mesos-rxjava</url>
+    <url>https://github.com/mesosphere/mesos-rxjava</url>
 
     <description>
         Rx client on top of Apache Mesos HTTP Api.
@@ -68,18 +68,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.java>1.8</version.java>
 
-        <version.assertj-core>3.2.0</version.assertj-core>
-        <version.guava>18.0</version.guava>
-        <version.jetbrains.annotations>13.0</version.jetbrains.annotations>
+        <version.assertj-core>3.5.2</version.assertj-core>
+        <version.guava>19.0</version.guava>
+        <version.jetbrains.annotations>15.0</version.jetbrains.annotations>
         <version.junit>4.12</version.junit>
-        <version.logback-classic>1.1.2</version.logback-classic>
-        <version.slf4j>1.7.10</version.slf4j>
+        <version.logback-classic>1.1.7</version.logback-classic>
+        <version.slf4j>1.7.21</version.slf4j>
 
-        <version.rxJava>1.0.14</version.rxJava>
-        <version.rxNetty>0.4.11</version.rxNetty>
+        <version.rxJava>1.1.8</version.rxJava>
+        <version.rxNetty>0.5.1</version.rxNetty>
         <version.protobuf>2.6.1</version.protobuf>
-        <version.netty>4.0.25.Final</version.netty>
-        <version.mesos>1.0.0-rc1</version.mesos>
+        <version.netty>4.1.4.Final</version.netty>
+        <version.mesos>1.0.0</version.mesos>
 
         <!-- By default we skip deploy of all modules. Any module that should be deployed is explicitly enabled -->
         <module.deploy.skip>true</module.deploy.skip>
@@ -156,6 +156,11 @@
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
+                <artifactId>netty-handler</artifactId>
+                <version>${version.netty}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
                 <artifactId>netty-transport-native-epoll</artifactId>
                 <version>${version.netty}</version>
             </dependency>
@@ -185,21 +190,6 @@
                 <artifactId>slf4j-api</artifactId>
                 <version>${version.slf4j}</version>
             </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>jcl-over-slf4j</artifactId>
-                <version>${version.slf4j}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>log4j-over-slf4j</artifactId>
-                <version>${version.slf4j}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>jul-to-slf4j</artifactId>
-                <version>${version.slf4j}</version>
-            </dependency>
 
             <!-- Test Libraries -->
             <dependency>
@@ -224,12 +214,6 @@
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${version.assertj-core}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-core</artifactId>
-                <version>2.0.31-beta</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -259,10 +243,6 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
         </dependency>
     </dependencies>
 
@@ -295,12 +275,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>2.2.1</version>
+                    <version>3.0.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.9.1</version>
+                    <version>2.10.4</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -310,12 +290,12 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.3.2</version>
+                    <version>1.5.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <version>2.5.3</version>
+                    <version>2.6</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -328,13 +308,37 @@
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <version>1.8</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.6</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-project-info-reports-plugin</artifactId>
+                    <version>2.9</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
                 <configuration>
                     <source>${version.java}</source>
                     <target>${version.java}</target>
@@ -362,7 +366,6 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>license-maven-plugin</artifactId>
-                        <version>1.8</version>
                         <configuration>
                             <excludedScopes>test</excludedScopes>
                             <excludedGroups>${project.groupId}</excludedGroups>
@@ -386,7 +389,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>2.2.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -399,7 +401,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.3</version>
                         <configuration>
                             <aggregate>true</aggregate>
                             <author>false</author>
@@ -407,7 +408,7 @@
                             <detectJavaApiLink>true</detectJavaApiLink>
                             <links>
                                 <link>http://reactivex.io/RxJava/javadoc/</link>
-                                <link>http://netty.io/4.0/api/</link>
+                                <link>http://netty.io/4.1/api/</link>
                                 <link>http://mesos.apache.org/api/latest/java/</link>
                             </links>
                             <show>protected</show>
@@ -432,7 +433,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.5</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -446,7 +446,6 @@
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.3</version>
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>ossrh</serverId>
@@ -464,7 +463,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.3</version>
                         <configuration>
                             <includeDependencySources>true</includeDependencySources>
                             <includeTransitiveDependencySources>true</includeTransitiveDependencySources>
