Update project to move Guava dependency to test scope
All modules have been updated to no longer depend on Guava functionality
for main code.

Sleepy framework still depends on Guava at compile scope, but it is not
a library others will depend on.

--- a/mesos-rxjava-example/mesos-rxjava-example-framework/pom.xml
+++ b/mesos-rxjava-example/mesos-rxjava-example-framework/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>mesos-rxjava-test</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.mesos</groupId>
             <artifactId>mesos</artifactId>
         </dependency>
