--- a/mesos-rxjava-client/pom.xml
+++ b/mesos-rxjava-client/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>com.mesosphere.mesos.rx.java</groupId>
         <artifactId>mesos-rxjava</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>mesos-rxjava-client</artifactId>
