--- a/mesos-rxjava-example/mesos-rxjava-example-framework/pom.xml
+++ b/mesos-rxjava-example/mesos-rxjava-example-framework/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.mesosphere.mesos.rx.java.example</groupId>
         <artifactId>mesos-rxjava-example</artifactId>
-        <version>0.1.1-SNAPSHOT</version>
+        <version>0.1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
