--- a/mesos-rxjava-example/pom.xml
+++ b/mesos-rxjava-example/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.mesosphere.mesos.rx.java</groupId>
         <artifactId>mesos-rxjava</artifactId>
-        <version>0.1.1-SNAPSHOT</version>
+        <version>0.1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
