--- a/mesos-rxjava-recordio/pom.xml
+++ b/mesos-rxjava-recordio/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.mesosphere.mesos.rx.java</groupId>
         <artifactId>mesos-rxjava</artifactId>
-        <version>0.1.2-SNAPSHOT</version>
+        <version>0.1.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
