--- a/mesos-rxjava-util/pom.xml
+++ b/mesos-rxjava-util/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>mesos-rxjava</artifactId>
         <groupId>com.mesosphere.mesos.rx.java</groupId>
-        <version>0.1.2</version>
+        <version>0.1.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
