--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>com.mesosphere.mesos.rx.java</groupId>
     <artifactId>mesos-rxjava</artifactId>
-    <version>0.2.0</version>
+    <version>0.2.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Mesos RxJava</name>
@@ -108,28 +108,28 @@
             <dependency>
                 <groupId>com.mesosphere.mesos.rx.java</groupId>
                 <artifactId>mesos-rxjava-client</artifactId>
-                <version>0.2.0</version>
+                <version>0.2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.mesosphere.mesos.rx.java</groupId>
                 <artifactId>mesos-rxjava-recordio</artifactId>
-                <version>0.2.0</version>
+                <version>0.2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.mesosphere.mesos.rx.java</groupId>
                 <artifactId>mesos-rxjava-util</artifactId>
-                <version>0.2.0</version>
+                <version>0.2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.mesosphere.mesos.rx.java</groupId>
                 <artifactId>mesos-rxjava-test</artifactId>
-                <version>0.2.0</version>
+                <version>0.2.1-SNAPSHOT</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.mesosphere.mesos.rx.java</groupId>
                 <artifactId>mesos-rxjava-protobuf-client</artifactId>
-                <version>0.2.0</version>
+                <version>0.2.1-SNAPSHOT</version>
             </dependency>
 
             <!-- Rx Libraries -->
